--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,24 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+    <build>
+  <pluginManagement>
+  <plugins>
+
+  <!-- maven plugins -->
+  <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.1</version>
+    <configuration>
+      <source>1.8</source>
+      <target>1.8</target>
+      <encoding>utf-8</encoding>
+    </configuration>
+  </plugin>
+  </plugins>
+  </pluginManagement>
+    </build>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -22,4 +40,5 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
 </project>
